--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <h1>Manual de Symfony 2022</h1>
     </head>
     <body>
         {% block body %}{% endblock %}
