--- a/templates/articulo/index.html.twig
+++ b/templates/articulo/index.html.twig
@@ -1,20 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ArticuloController!{% endblock %}
+{% block title %}Articulo index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Articulo index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Titulo</th>
+                <th>Descripcion</th>
+                <th>Codigo</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for articulo in articulos %}
+            <tr>
+                <td>{{ articulo.id }}</td>
+                <td>{{ articulo.titulo }}</td>
+                <td>{{ articulo.descripcion }}</td>
+                <td>{{ articulo.codigo }}</td>
+                <td>
+                    <a href="{{ path('app_articulo_show', {'id': articulo.id}) }}">show</a>
+                    <a href="{{ path('app_articulo_edit', {'id': articulo.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="5">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/anton/Desktop/PW/Symfony/src/Controller/ArticuloController.php'|file_link(0) }}">src/Controller/ArticuloController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/anton/Desktop/PW/Symfony/templates/articulo/index.html.twig'|file_link(0) }}">templates/articulo/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_articulo_new') }}">Create new</a>
 {% endblock %}
