--- a/templates/articulo/show.html.twig
+++ b/templates/articulo/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Articulo{% endblock %}
 
 {% block body %}
-    <h1>Articulo</h1>
+    <h1>Articulos</h1>
 
     <table class="table">
         <tbody>
